--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-/* Background color para toda la pagina */
+/* Background color para toda la pagina negro */
 body {
   background-color: #171717;
   color: aliceblue;
