--- a/style.css
+++ b/style.css
@@ -264,3 +264,210 @@ nav ul a {
     opacity: 1;
   }
 }
+
+
+
+
+
+
+
+/* ESTILO DEL LOGIN SECTION */
+/* styling the login form */
+.lgf {
+  flex: 3 1 0%;
+  display: flex;
+  justify-content: center;
+  padding: 10%;
+}
+
+form {
+  border: 3px solid #f1f1f1;
+  width: 500px;
+  max-width: 100%;
+}
+.loginform {
+  padding: 0 10%;
+}
+.info {
+  font-weight: bold;
+  font-size: 25px;
+  color: black;
+}
+.uname,
+.psw {
+  width: 100%;
+  padding: 10px 20px;
+  margin: 8px 0;
+  display: block;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+.login-btn {
+  background-color: #ffd000;
+  color: black;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+  /* display: block; */
+  font-weight: bold;
+  font-family: "Oswald", sans-serif;
+  letter-spacing: 1px;
+  font-size: 15px;
+}
+.login-btn:hover {
+  opacity: 0.8;
+}
+.rmbr {
+  margin-left: 50%;
+  font-weight: bold;
+}
+.fgt {
+  padding: 16px 50px;
+  margin-top: 20px;
+  background-color: #f1f1f1;
+  display: flex;
+  justify-content: space-between;
+}
+.cancel-btn {
+  width: auto;
+  padding: 10px 18px;
+  background-color: #f44336;
+  border: none;
+  cursor: pointer;
+  font-weight: bold;
+  font-family: "Oswald", sans-serif;
+  letter-spacing: 1px;
+  font-size: 15px;
+}
+.cancel-btn:hover {
+  opacity: 0.8;
+}
+.fgt a {
+  font-weight: bold;
+  text-decoration: none;
+}
+
+
+
+/* ESTILO DEL CONTACT US SECTION */
+/* creating the grid area for contact info */
+.contenedor {
+  text-align: center;
+  margin: 0 auto;
+  padding-top: 10%;
+  padding-bottom: 10%;
+  display: grid;
+  grid-template-columns: 4fr 3fr 4fr;
+  grid-template-rows: repeat(2, 0.8fr);
+  grid-template-areas:
+    "scl hrs cntct"
+    "msg msg msg";
+  gap: 1rem;
+}
+}
+/* Header logo and name */
+.header-logo {
+text-align: center;
+padding: 50px;
+line-height: 4em;
+display: flex;
+align-items: baseline;
+justify-content: center;
+}
+.logo {
+display: block;
+}
+.olympo {
+display: inline;
+font-size: 5em;
+}
+.fit {
+font-size: 250%;
+}
+/* Top navigation menu */
+nav {
+padding: 0px 20px;
+background-color: #ffd000;
+width: 100%;
+}
+nav ul {
+list-style: none;
+}
+nav ul a {
+color: #171717;
+text-decoration: none;
+}
+.logo {
+height: 7rem;
+}
+.top_nav li {
+font-size: 20px;
+font-weight: bold;
+text-transform: uppercase;
+padding: 15px 5px;
+border-bottom: 3px solid #ffd000;
+}
+.top_nav li a {
+display: block;
+}
+.links:hover {
+border-bottom: 3px solid #171717;
+}
+.top_nav .current {
+border-bottom: 3px solid #171717;
+}
+/* defining grid areas */
+.scl {
+grid-area: scl;
+}
+.hrs {
+grid-area: hrs;
+}
+.cntct {
+grid-area: cntct;
+}
+.msg {
+grid-area: msg;
+}
+/* removing dots from lists */
+ul li {
+list-style: none;
+}
+/* Style inputs with type="text", select elements and textareas */
+input[type="text"],
+select,
+textarea {
+display: flex;
+flex-direction: column;
+width: 90%;
+padding: 12px;
+border: 1px solid #ccc;
+border-radius: 4px;
+margin-top: 6px;
+margin-bottom: 16px;
+resize: vertical;
+}
+/* Style the submit button */
+input[type="submit"] {
+background-color: #ffd000;
+color: #171717;
+padding: 12px 20px;
+border: none;
+border-radius: 4px;
+cursor: pointer;
+}
+
+input[type="submit"]:hover {
+opacity: 0.8;
+}
+
+/* Add a background color around the form */
+.msg {
+text-align: left;
+border-radius: 5px;
+background-color: #f2f2f2;
+padding: 20px;
+}
+.msg h1 {
+text-align: center;
+}
