--- a/css/style.css
+++ b/css/style.css
@@ -49,87 +49,17 @@ nav .fit {
   }
 }
 
-/* Carrusel slideshow */
-.carrusel {
-  position: relative;
-  margin: 5% auto;
-}
-
-.slide {
-  width: 100%;
-}
-
-.gym {
-  width: 100%;
-  display: none;
-}
-
-.slideshow-container {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  display: block;
-}
-
-/* Next and previous buttons */
-.prev,
-.next {
-  cursor: pointer;
-  position: absolute;
-  top: 40%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 50px;
-  -webkit-transition: 0.6s ease;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  display: block;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover,
-.next:hover {
-  background-color: rgba(0, 0, 0, 0.8);
-}
-
-/* The dots indicators */
-.dot {
-  cursor: pointer;
-  height: 10px;
-  width: 10px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  -webkit-transition: background-color 0.6s ease;
-  transition: background-color 0.6s ease;
-}
-
 /* welcome section of the webpage */
 .descripcion {
   text-transform: uppercase;
   font-weight: bold;
   line-height: 1.5em;
-  padding-top: 10%;
-  text-align: center;
+  padding-top: 5%;
 }
 
-.descripcion hr {
-  border: none;
-  border-bottom: 5px solid #171717;
-  width: 250px;
-  max-width: 100%;
-  margin: 0 auto;
-  padding: 0.5rem;
+.descripcion h1 {
+  text-align: center;
+  font-size: 5rem;
 }
 
 .descripcion p {
@@ -137,9 +67,10 @@ nav .fit {
   font-size: 1.5rem;
   margin-top: 2rem;
   line-height: 2.4rem;
+  text-align: justify;
 }
 
-.name {
+.descripcion .name {
   color: #ffd000;
 }
 
