--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,34 @@ nav .fit {
   font-weight: bold;
   line-height: 1.5em;
   padding-top: 5%;
+  padding-bottom: 5%;
+  background-color: black;
+  color: white;
+}
+
+.descripcion-ani {
+  animation: fadein 2s;
+  -moz-animation: fadein 2s;
+  -webkit-animation: fadein 2s;
+  -o-animation: fadein 2s;
+}
+
+@keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@-webkit-keyframes fadein {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 .descripcion h1 {
@@ -62,31 +90,54 @@ nav .fit {
   font-size: 5rem;
 }
 
+@media screen and (max-width: 992px) {
+  .descripcion h1 {
+    font-size: 3.5rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .descripcion h1 {
+    font-size: 2.6rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .descripcion h1 {
+    font-size: 1.6rem;
+  }
+}
+
 .descripcion p {
   padding: 0.5rem;
   font-size: 1.5rem;
   margin-top: 2rem;
   line-height: 2.4rem;
-  text-align: justify;
+  margin-left: 20%;
+  margin-right: 20%;
+  text-align: center;
 }
 
-.descripcion .name {
+@media screen and (max-width: 992px) {
+  .descripcion p {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .descripcion p {
+    font-size: 1.3rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .descripcion p {
+    font-size: 0.8rem;
+  }
+}
+
+.name {
   color: #ffd000;
-}
-
-/* membership plans section */
-.div-line {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-}
-
-.div-line hr {
-  display: block;
 }
 
 /* creating imgs with link and a learn more button */
