--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,7 +13,7 @@ main {
 @import "./partials/navbar";
 @import "./partials/banner";
 @import "./partials/plans";
-@import "./partials/plans";
+@import "./partials/faq";
 @import "./partials/contact/contact";
 @import "./partials/login/login";
 @import "./partials/footer";
