--- a/scss/partials/_faq.scss
+++ b/scss/partials/_faq.scss
@@ -1,3 +1,16 @@
 .faq {
-  align-items: center;
+  h1 {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 3rem;
+    @media screen and (max-width: 992px) {
+      font-size: 3.5rem;
+    }
+    @media screen and (max-width: 768px) {
+      font-size: 2.6rem;
+    }
+    @media screen and (max-width: 480px) {
+      font-size: 1.6rem;
+    }
+  }
 }
