--- a/scss/partials/_plans.scss
+++ b/scss/partials/_plans.scss
@@ -1,10 +1,25 @@
-/* creating imgs with link and a learn more button */
-.card {
-  background-color: #171717;
-  color: white;
-}
-.btn-plans {
-  background-color: #ffd000;
-  color: #171717;
-  border: #171717;
+.mbr-plans {
+  h1 {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 3rem;
+    @media screen and (max-width: 992px) {
+      font-size: 3.5rem;
+    }
+    @media screen and (max-width: 768px) {
+      font-size: 2.6rem;
+    }
+    @media screen and (max-width: 480px) {
+      font-size: 1.6rem;
+    }
+  }
+  .card {
+    background-color: #171717;
+    color: white;
+  }
+  .btn-plans {
+    background-color: #ffd000;
+    color: #171717;
+    border: #171717;
+  }
 }
