--- a/scss/partials/login/_login.scss
+++ b/scss/partials/login/_login.scss
@@ -1,5 +1,3 @@
-/* ESTILO DEL LOGIN SECTION */
-/* styling the login form */
 .lgf {
   flex: 3 1 0%;
   display: flex;
@@ -40,9 +38,14 @@ form {
   font-family: "Oswald", sans-serif;
   letter-spacing: 1px;
   font-size: 15px;
+  &:hover {
+    opacity: 0.8;
+  }
 }
-.login-btn:hover {
-  opacity: 0.8;
+.cancel-btn{
+  @extend .login-btn;
+  background-color: #f44336;
+  border-radius: 5px;
 }
 .rmbr {
   margin-left: 50%;
@@ -54,22 +57,8 @@ form {
   background-color: #f1f1f1;
   display: flex;
   justify-content: space-between;
-}
-.cancel-btn {
-  width: auto;
-  padding: 10px 18px;
-  background-color: #f44336;
-  border: none;
-  cursor: pointer;
-  font-weight: bold;
-  font-family: "Oswald", sans-serif;
-  letter-spacing: 1px;
-  font-size: 15px;
-}
-.cancel-btn:hover {
-  opacity: 0.8;
-}
-.fgt a {
-  font-weight: bold;
-  text-decoration: none;
+  a {
+    font-weight: bold;
+    text-decoration: none;
+  }
 }
