--- a/css/style.css
+++ b/css/style.css
@@ -200,50 +200,50 @@ nav .fit {
 
 /* ESTILO DEL CONTACT US SECTION */
 /* creating the grid area for contact info */
-.contenedor {
-  text-align: center;
-  margin: 0 auto;
-  padding-top: 10%;
-  padding-bottom: 10%;
-  display: -ms-grid;
-  display: grid;
-  -ms-grid-columns: 4fr 3fr 4fr;
-      grid-template-columns: 4fr 3fr 4fr;
-  -ms-grid-rows: (0.8fr)[2];
-      grid-template-rows: repeat(2, 0.8fr);
-      grid-template-areas: "scl hrs cntct" "msg msg msg";
-  gap: 1rem;
-}
-
-/* defining grid areas */
-.scl {
-  -ms-grid-row: 1;
-  -ms-grid-column: 1;
-  grid-area: scl;
-}
-
-.hrs {
-  -ms-grid-row: 1;
-  -ms-grid-column: 2;
-  grid-area: hrs;
-}
-
-.cntct {
-  -ms-grid-row: 1;
-  -ms-grid-column: 3;
-  grid-area: cntct;
-}
-
-.msg {
-  -ms-grid-row: 2;
-  -ms-grid-column: 1;
-  -ms-grid-column-span: 3;
-  grid-area: msg;
-}
-
 /* removing dots from lists */
-ul li {
+.ctc {
+  padding-top: 5%;
+  padding-bottom: 10%;
+}
+
+ul {
   list-style: none;
+}
+
+.scl {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.scl li {
+  list-style: none;
+  display: inline-block;
+}
+
+.scl li .bi-facebook {
+  text-align: center;
+  margin-left: 5px;
+  margin-right: 5px;
+  color: #4267b2;
+}
+
+.scl li .bi-youtube {
+  text-align: center;
+  margin-left: 5px;
+  margin-right: 5px;
+  color: #ff0000;
+}
+
+.scl li .bi-instagram {
+  text-align: center;
+  margin-left: 5px;
+  margin-right: 5px;
+  background: -webkit-linear-gradient(#405de6, #5851db, #833ab4, #c13584, #e1306c, #fd1d1d, #f56040, #f77737, #fcaf45, #ffdc80);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 /* Style inputs with type="text", select elements and textareas */
@@ -345,7 +345,6 @@ form {
   padding: 10px 20px;
   border: none;
   cursor: pointer;
-  /* display: block; */
   font-weight: bold;
   font-family: "Oswald", sans-serif;
   letter-spacing: 1px;
@@ -387,10 +386,16 @@ footer {
   background-color: #000000;
   color: #ffffff;
   margin-top: 0px;
+  padding-top: 10%;
+  padding-bottom: 10%;
 }
 
 footer h4 {
   color: #ffd000;
+}
+
+footer ul {
+  padding-left: 0;
 }
 
 footer .bi-youtube {
