--- a/scss/partials/_footer.scss
+++ b/scss/partials/_footer.scss
@@ -2,9 +2,15 @@ footer {
   background-color: #000000;
   color: #ffffff;
   margin-top: 0px;
+  padding-top: 10%;
+  padding-bottom: 10%;
 
   h4 {
     color: #ffd000;
+  }
+
+  ul{
+    padding-left: 0;
   }
 
   .bi-youtube {
