actualizacion del index

--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ nav .fit {
 
 .descripcion p {
   padding: 0.5rem;
-  font-size: 1.5rem;
+  font-size: 3rem;
   margin-top: 2rem;
   line-height: 2.4rem;
   margin-left: 20%;
@@ -138,26 +138,138 @@ nav .fit {
   color: #ffd000;
 }
 
-.mbr-plans h1 {
+.fitgrp {
+  padding-left: 15%;
+  padding-top: 5%;
   text-transform: uppercase;
+}
+
+@media screen and (max-width: 768px) {
+  .fitgrp {
+    padding-right: 15%;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .fitgrp {
+    padding-right: 15%;
+  }
+}
+
+.fitgrp h2 {
   text-align: center;
-  font-size: 3rem;
+  font-family: 'Bebas Neue', cursive;
+  font-size: 6rem;
+  letter-spacing: 0.5rem;
+  font-weight: bold;
+  border-bottom: 10px solid #171717;
+}
+
+@media screen and (max-width: 768px) {
+  .fitgrp h2 {
+    font-size: 4rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .fitgrp h2 {
+    font-size: 2rem;
+  }
+}
+
+.fitgrp p {
+  padding-top: 3%;
+  font-size: 2rem;
+  text-align: justify;
+  letter-spacing: 0.2rem;
+}
+
+@media screen and (max-width: 768px) {
+  .fitgrp p {
+    font-size: 1.5rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .fitgrp p {
+    font-size: 0.8rem;
+  }
+}
+
+.fitgrp p span {
+  font-weight: bold;
 }
 
 @media screen and (max-width: 992px) {
-  .mbr-plans h1 {
+  .rope {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .rope {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .rope {
+    display: none;
+  }
+}
+
+.grd {
+  padding: 5%;
+}
+
+.grd h2 {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 4rem;
+  font-weight: bold;
+  font-family: 'Bebas Neue', cursive;
+}
+
+@media screen and (max-width: 992px) {
+  .grd h2 {
     font-size: 3.5rem;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .mbr-plans h1 {
+  .grd h2 {
     font-size: 2.6rem;
   }
 }
 
 @media screen and (max-width: 480px) {
-  .mbr-plans h1 {
+  .grd h2 {
+    font-size: 1.6rem;
+  }
+}
+
+.mbr-plans h2 {
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 4rem;
+  font-weight: bold;
+  font-family: 'Bebas Neue', cursive;
+}
+
+@media screen and (max-width: 992px) {
+  .mbr-plans h2 {
+    font-size: 3.5rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .mbr-plans h2 {
+    font-size: 2.6rem;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .mbr-plans h2 {
     font-size: 1.6rem;
   }
 }
