--- a/scss/partials/_plans.scss
+++ b/scss/partials/_plans.scss
@@ -1,8 +1,82 @@
-.mbr-plans {
-  h1 {
+.fitgrp{
+  padding-left: 15%;
+  padding-top: 5%;
+  text-transform: uppercase;
+  @media screen and (max-width: 768px) {
+    padding-right: 15%;
+  }
+  @media screen and (max-width: 480px) {
+    padding-right: 15%;
+  }
+  h2{
+  text-align: center;
+  font-family: 'Bebas Neue', cursive;
+  font-size: 6rem;
+  letter-spacing: 0.5rem;
+  font-weight: bold;
+  border-bottom: 10px solid #171717;
+  @media screen and (max-width: 768px) {
+    font-size: 4rem;
+  }
+  @media screen and (max-width: 480px) {
+    font-size: 2rem;
+  }
+  }
+  p{
+    padding-top: 3%;
+    font-size: 2rem;
+    text-align: justify;
+    letter-spacing: 0.2rem;
+    @media screen and (max-width: 768px) {
+      font-size: 1.5rem;
+    }
+    @media screen and (max-width: 480px) {
+      font-size: 0.8rem;
+    }
+    span{
+      font-weight: bold;
+    }
+  }
+}
+.rope{
+  @media screen and (max-width: 992px) {
+    display: none;
+  }
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
+  @media screen and (max-width: 480px) {
+    display: none;
+  }
+}
+
+.grd{
+  padding: 5%;
+  h2{
     text-transform: uppercase;
     text-align: center;
-    font-size: 3rem;
+    font-size: 4rem;
+    font-weight: bold;
+    font-family: 'Bebas Neue', cursive;
+    @media screen and (max-width: 992px) {
+      font-size: 3.5rem;
+    }
+    @media screen and (max-width: 768px) {
+      font-size: 2.6rem;
+    }
+    @media screen and (max-width: 480px) {
+      font-size: 1.6rem;
+    }
+  }
+}
+
+.mbr-plans {
+  h2 {
+    text-transform: uppercase;
+    text-align: center;
+    font-size: 4rem;
+    font-weight: bold;
+    font-family: 'Bebas Neue', cursive;
     @media screen and (max-width: 992px) {
       font-size: 3.5rem;
     }
