--- a/scss/partials/contact/_contact.scss
+++ b/scss/partials/contact/_contact.scss
@@ -1,10 +1,14 @@
 /* ESTILO DEL CONTACT US SECTION */
-/* creating the grid area for contact info */
-
-/* removing dots from lists */
+h2{
+  font-family: 'Bebas Neue', cursive;
+  text-align: center;
+}
 .ctc{
   padding-top: 5%;
   padding-bottom: 10%;
+  h2{
+    border-bottom: 1px solid #dfdfdf;
+  }
 }
 ul{
   list-style: none;
@@ -26,13 +30,53 @@ ul{
     }
   }
 }
+.ctcinfo{
+  li{
+    padding: 1% 0;
+    iframe{
+      max-width: 100%;
+      padding-top: 5%;
+    }
+  }
+}
+.faq{
+  text-transform: uppercase;
+    text-align: center;
+    padding-top: 10%;
+    h2{
+      font-size: 4rem;
+      font-weight: bold;
+    }
+}
+.questions{
+  padding-top: 5%;
+  padding-bottom: 5%;
+  border-left: 1px solid #dfdfdf;
+  @media screen and (max-width: 992px) {
+    border: none;
+  }
+  @media screen and (max-width: 768px) {
+    border: none;
+  }
+  @media screen and (max-width: 480px) {
+    border: none;
+  }
+  li{
+    font-family: 'Bebas Neue', cursive;
+    font-size: 2rem;
+    letter-spacing: 0.2rem;
+  }
+}
 /* Style inputs with type="text", select elements and textareas */
+.qfrm{
+  padding-top: 5%;
+}
 input[type="text"],
 select,
 textarea {
   display: flex;
   flex-direction: column;
-  width: 90%;
+  width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
   border-radius: 4px;
@@ -45,17 +89,5 @@ input[type="submit"] {
   @include o-btn;
   &:hover {
     opacity: 0.8;
-  }
-}
-
-
-/* Add a background color around the form */
-.msg {
-  text-align: left;
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
-  h1 {
-    text-align: center;
   }
 }
